# clogger

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  clogger.yaml  rebuild.sh  setlevel.sh
conf/: zlog.conf
src/: main.c
